[gd_scene load_steps=5 format=3 uid="uid://clyq0flge8xkt"]

[ext_resource type="Script" uid="uid://byhqhgp7f0djd" path="res://Scripts/EventPanelController.gd" id="1_u7p6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7p6f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35qah"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3iuq"]
bg_color = Color(0, 0, 0, 1)

[node name="EventPanel" type="Node2D"]
script = ExtResource("1_u7p6f")

[node name="Panel" type="Panel" parent="."]
offset_right = 1002.0
offset_bottom = 626.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u7p6f")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 129.0
offset_top = 50.0
offset_right = 836.0
offset_bottom = 410.0
theme_override_styles/panel = SubResource("StyleBoxFlat_35qah")

[node name="Panel" type="Panel" parent="Panel/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 7.0
offset_right = 694.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k3iuq")
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Panel/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 683.0
offset_bottom = 342.0
text = "Description"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Button1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 464.0
offset_top = 460.0
offset_right = 514.0
offset_bottom = 491.0
text = "Close"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 464.0
offset_top = 506.0
offset_right = 514.0
offset_bottom = 537.0
text = "Close"

[connection signal="pressed" from="Panel/Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
